# MoneyTgBot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  durov.html  durov_mobile.html  gs_docs.md  pyproject.toml  test_docs.py  test_scrape.py
.github/workflows/: tests.yml
app/: __init__.py  api.py  config.py  i18n.py  main.py  web.py
app/assets/fonts/: README.md
app/bot/: cards.py  keyboards.py  main.py  panel.py
app/bot/handlers/: history.py  integrations.py  profile.py  settings.py  transactions.py
app/db/: __init__.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/services/: card_service.py  fx_service.py  gift_satellite_service.py  history_service.py  inout_pie_service.py  ledger_service.py  manual_input_parser.py  monobank_service.py  qr_service.py  report_service.py  security.py  send_service.py  telegram_scraper_service.py  ton_service.py  wallet_derive.py
app/workers/: __init__.py  scheduler.py
tests/: test_history_filters.py  test_manual_input_parser.py
